2005-03-29  Olive Lin  <olive.lin@versateladsl.be>

	* textmodes/tex-mode.el (tex-send-command): shell-quote-argument
	on the file name we pass to the inferior shell.

2005-03-29  Stephan Stahl  <stahl@eos.franken.de>  (tiny change)

	* progmodes/which-func.el (which-function): Be robust in the face of an
	imenu--make-index-alist failure.

2005-03-29  Stefan Monnier  <monnier@iro.umontreal.ca>

	* reveal.el (reveal-mode-map): Don't override C-a and C-e.

	* progmodes/python.el (python-preoutput-filter): Fix last change.

2005-03-29  Lute Kamstra  <lute@gnu.org>

	* emacs-lisp/debug.el (debug-on-entry): Handle autoloaded
	functions and compiled macros.
	(debug-convert-byte-code): Handle macros too.
	(debug-on-entry-1): Don't signal an error when trying to clear a
	function that is not set to debug on entry.

2005-03-29  Jay Belanger  <belanger@truman.edu>

	* calc/calc-lang.el: Add functions to math-function-table
	properties of tex and math.

2005-03-29  Kenichi Handa  <handa@m17n.org>

	* ps-mule.el (ps-mule-plot-string): Translate characters by
	ps-print-translation-table.
	(ps-mule-begin-job): Call find-charset-region/string with
	ps-print-translation-table.
	(ps-mule-printable-p): Return t if CHARSET is ascii or latin-iso8859-1.

	* ps-print.el (ps-print-translation-table): New variable.
	(ps-plot-region): Translate characters by ps-print-translation-table.

2005-03-29  Juri Linkov  <juri@jurta.org>

	* simple.el (next-error-highlight-timer): New variable.

	* progmodes/compile.el (compilation-goto-locus):
	Use `next-error-highlight-timer' instead of `sit-for'.

2005-03-28  Stefan Monnier  <monnier@iro.umontreal.ca>

	* mail/supercite.el (sc-mail-field): Use assoc-string.
	(sc-get-address): Simplify regexps.

	* files.el (minibuffer-with-setup-hook): New macro.
	(find-file-read-args): Use it to avoid let-binding
	minibuffer-with-setup-hook (which breaks turning on/off
	file-name-shadow-mode while in the prompt).
